add axis elements

--- a/bar-chart/index.html
+++ b/bar-chart/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
     <h1 id="title">Bar Chart</h1>
+    <g class="tick" id="x-axis"></g>
+    <g class="tick" id="y-axis"></g>
 </body>
 </html>
