--- a/scatterplot-graph/index.html
+++ b/scatterplot-graph/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://d3js.org/d3.v6.min.js" type="module"></script>
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
     <title>Document</title>
   </head>
   <body>
