--- a/heat-map/index.html
+++ b/heat-map/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://d3js.org/d3.v6.min.js" type="module"></script>
     <script src="scripts.js" defer></script>
-    <title>Document</title>
+    <title>Heat Map</title>
   </head>
   <body>
     <h1 id="title">Bar Chart</h1>
-    <div id="tooltip"></div>
+    <div id="Heat Map"></div>
   </body>
 </html>
