--- a/bar-chart/index.html
+++ b/bar-chart/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://d3js.org/d3.v6.min.js" type="module"></script>
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>tooltip</title>
   </head>
   <body>
     <h1 id="title">Bar Chart</h1>
