change title in header

--- a/scatterplot-graph/index.html
+++ b/scatterplot-graph/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://d3js.org/d3.v6.min.js" type="module"></script>
     <script src="scripts.js" defer></script>
-    <title>Document</title>
+    <title>Scatterplot</title>
   </head>
   <body>
     <h1 id="title">Scatterplot Graph</h1>
