--- a/heat-map/index.html
+++ b/heat-map/index.html
@@ -9,7 +9,7 @@
     <title>Heat Map</title>
   </head>
   <body>
-    <h1 id="title">Heat Map</h1>
+    <h1 id="title">Monthly Global Land-Surface Temperature</h1>
     <div id="Heat Map"></div>
   </body>
 </html>
