--- a/heat-map/index.html
+++ b/heat-map/index.html
@@ -11,6 +11,6 @@
   <body>
     <h1 id="title">Monthly Global Land-Surface Temperature</h1>
     <h2 id="description">1753 - 2015: base temperature 8.66℃</h2>
-    <div id="Heat Map"></div>
+    <div id="tooltip"></div>
   </body>
 </html>
