--- a/heat-map/index.html
+++ b/heat-map/index.html
@@ -12,5 +12,6 @@
     <h1 id="title">Monthly Global Land-Surface Temperature</h1>
     <h2 id="description">1753 - 2015: base temperature 8.66℃</h2>
     <div id="tooltip"></div>
+    <svg id="legend"></svg>
   </body>
 </html>
