change color and add legend

--- a/heat-map/index.html
+++ b/heat-map/index.html
@@ -12,6 +12,31 @@
     <h1 id="title">Monthly Global Land-Surface Temperature</h1>
     <h2 id="description">1753 - 2015: base temperature 8.66℃</h2>
     <div id="tooltip"></div>
-    <svg id="legend"></svg>
+    <svg id="legend" width="150" height="50">
+      <g>
+        <rect x="0" y="0" height="25px" width="25px" fill="blue"></rect>
+        <text x="0" y="43" style="font-size: 10px">&lt;=3.9</text>
+      </g>
+      <g>
+        <rect x="25" y="0" height="25px" width="25px" fill="steelblue"></rect>
+        <text x="25" y="43" style="font-size: 10px">&lt;=5</text>
+      </g>
+      <g>
+        <rect x="50" y="0" height="25px" width="25px" fill="lightskyblue"></rect>
+        <text x="50" y="43" style="font-size: 10px">&lt;=7.2</text>
+      </g>
+      <g>
+        <rect x="75" y="0" height="25px" width="25px" fill="lightblue"></rect>
+        <text x="75" y="43" style="font-size: 10px">&lt;=8.3</text>
+      </g>
+      <g>
+        <rect x="100" y="0" height="25px" width="25px" fill="tomato"></rect>
+        <text x="100" y="43" style="font-size: 10px">&lt;=9.5</text>
+      </g>
+      <g>
+        <rect x="125" y="0" height="25px" width="25px" fill="firebrick"></rect>
+        <text x="125" y="43" style="font-size: 10px">&lt;=10.6</text>
+      </g>
+    </svg>
   </body>
 </html>
