--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -8,5 +8,8 @@
     <script src="scripts.js" defer></script>
     <title>Heat Map</title>
   </head>
-  <body></body>
+  <body>
+    <h1 id="title"></h1>
+    <h2 id="description"></h2>
+  </body>
 </html>
