--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -9,7 +9,7 @@
     <title>Heat Map</title>
   </head>
   <body>
-    <h1 id="title"></h1>
+    <h1 id="title">United States Educational Attainment</h1>
     <h2 id="description"></h2>
   </body>
 </html>
