--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <h1 id="title">United States Educational Attainment</h1>
-    <h2 id="description"></h2>
+    <h2 id="description">
+      Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)
+    </h2>
   </body>
 </html>
