--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -13,5 +13,6 @@
     <h2 id="description">
       Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)
     </h2>
+    <svg id="map"></svg>
   </body>
 </html>
