--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://d3js.org/d3.v6.min.js" type="module"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="scripts.js" defer></script>
     <title>Heat Map</title>
   </head>
