update topojson url

--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://d3js.org/d3.v6.min.js" type="module"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.js"
+      integrity="sha512-TRzTPm8e1jUdGz4mhoZstgVz6TIwSYubMI+MKF18uf6zBX8gwrcO0tlH+U/YgbVUVVh15RbNSAgKlab37WFPSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="scripts.js" defer></script>
     <title>Heat Map</title>
   </head>
