--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -7,7 +7,7 @@
     <script src="https://d3js.org/d3.v6.min.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
     <script src="script.js" defer></script>
-    <title>Heat Map</title>
+    <title>United States Educational Attainment</title>
   </head>
   <body>
     <h1 id="title">United States Educational Attainment</h1>
