--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -15,5 +15,6 @@
       Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)
     </h2>
     <svg id="map"></svg>
+    <svg id="legend"></svg>
   </body>
 </html>
