adding legend text and color

--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -15,6 +15,23 @@
       Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)
     </h2>
     <svg id="map"></svg>
-    <svg id="legend"></svg>
+    <svg id="legend">
+      <g>
+        <rect x="0" y="0" height="20px" width="20px" fill="#c7e9c0"></rect>
+        <text x="20" y="15" font-size="15px">less than 20%</text>
+      </g>
+      <g>
+        <rect x="0" y="20" height="20px" width="20px" fill="#a1d99b"></rect>
+        <text x="20" y="35" font-size="15px">less than 30%</text>
+      </g>
+      <g>
+        <rect x="0" y="40" height="20px" width="20px" fill="#74c476"></rect>
+        <text x="20" y="55" font-size="15px">less than 45%</text>
+      </g>
+      <g>
+        <rect x="0" y="60" height="20px" width="20px" fill="seagreen"></rect>
+        <text x="20" y="75" font-size="15px">rest</text>
+      </g>
+    </svg>
   </body>
 </html>
