--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -33,5 +33,6 @@
         <text x="20" y="75" font-size="15px">rest</text>
       </g>
     </svg>
+    <div id="tooltip"></div>
   </body>
 </html>
