return data-fips the id

--- a/choropleth-map/index.html
+++ b/choropleth-map/index.html
@@ -34,5 +34,6 @@
       </g>
     </svg>
     <div id="tooltip"></div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
