--- a/treemap-diagram/index.html
+++ b/treemap-diagram/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1 id="title">Treeman-diagram</h1>
+    <svg id="data-viz"></svg>
     <div id="tooltip"></div>
   </body>
 </html>
