add test script

--- a/treemap-diagram/index.html
+++ b/treemap-diagram/index.html
@@ -12,5 +12,6 @@
     <h1 id="title">Treeman-diagram</h1>
     <svg id="data-viz"></svg>
     <div id="tooltip"></div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
