--- a/treemap-diagram/index.html
+++ b/treemap-diagram/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1 id="title">Treeman-diagram</h1>
+    <h2 id="description">Top 100 Most Sold Video Games Grouped by Platform</h2>
     <svg id="data-viz"></svg>
     <div id="tooltip"></div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
