--- a/treemap-diagram/index.html
+++ b/treemap-diagram/index.html
@@ -13,6 +13,7 @@
     <h2 id="description">Top 100 Most Sold Video Games Grouped by Platform</h2>
     <svg id="data-viz"></svg>
     <div id="tooltip"></div>
+    <svg id="legend"></svg>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
